Changelog
=========

1.0b8 - unreleased
------------------

* Explicitly load CMFCore ZCML.
  [davisagli]

* Add ids to group fieldsets.
  [elro]

* Do a deep copy instead of shallow when assigning field defaults. Content
  generated via script wound up with linked list (and other
  AbstractCollection) fields.
  [cah190, esteele]

* Make setDescription coerce to unicode in the same way as setTitle.
  [elro]

* Change the FTI default to enable dynamic view.
  [elro]

* Setup folder permissions in the same way as Archetypes so copy / paste /
  rename work consistently with the rest of Plone.
  [elro]

* Make sure the typesUseViewActionInListings property is respected when
  redirecting after edit.
  [elro, davisagli]

* Fix #145: UnicodeDecodeError After renaming item from @@folder_contents
  [toutpt]

1.0b7 - 2011-02-11
------------------

* Add adapter for plone.rfc822.interfaces.IPrimaryFieldInfo.
  [elro]

* Fixed deadlock in synchronized methods of schema cache by using
  threading.RLock instead of threading.Lock.
  [jbaumann]

* Add Spanish translation.
  [dukebody]

* Add French translation.
  [toutpt]


1.0b6 - 2010-08-30
------------------

* Send ObjectCreatedEvent event from createContent utility method.
  [wichert]

* Update content base classes to use allow keyword arguments to set
  initial values for instance variables.
  [wichert]

* Avoid empty <div class="field"> tag for title and description in 
  item.pt.
  [gaudenzius]

 
1.0b5 - 2010-08-05
------------------

* Fix folder ordering bug.
  See: http://code.google.com/p/dexterity/issues/detail?id=113
  [optilude]

* Switch to the .Title() and .Description() methods of fti when used in 
  a translatable context, to ensure that these strings are translated.
  [mj]

* Add Norwegian translation.
  [mj]


1.0b4 - 2010-07-22
------------------

* Improve robustness: catch and log import errors when trying to resolve
  behaviours.
  [wichert]

* Add German translation from Christian Stengel.
  [wichert]

