@@ -1,10 +1,9 @@
 from zope.component import getUtility
 
-from plone.autoform.interfaces import IFormFieldProvider
 from plone.autoform.view import WidgetsView
 
 from plone.dexterity.interfaces import IDexterityFTI
-from plone.dexterity.utils import resolveDottedName
+from plone.dexterity.utils import getAdditionalSchemata
 
 
 class DefaultView(WidgetsView):
@@ -19,13 +18,4 @@ class DefaultView(WidgetsView):
 
     @property
     def additionalSchemata(self):
-        fti = getUtility(IDexterityFTI, name=self.context.portal_type)
-        for behavior_name in fti.behaviors:
-            try:
-                behavior_interface = resolveDottedName(behavior_name)
-            except ValueError:
-                continue
-            if behavior_interface is not None:
-                behavior_schema = IFormFieldProvider(behavior_interface, None)
-                if behavior_schema is not None:
-                    yield behavior_schema
+        return getAdditionalSchemata(context=self.context)
